--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.5+1
-  socket_io_client: ^3.1.3
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
