--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,20 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dio: ^5.9.0
   flutter:
     sdk: flutter
+  get_it: ^9.2.0
+  injectable: ^2.7.1+2
   provider: ^6.1.5+1
   web_socket_channel: ^3.0.3
 
 dev_dependencies:
+  build_runner: ^2.10.4
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.11.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
