--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,12 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   get_it: ^9.2.0
+  go_router: ^17.0.0
   injectable: ^2.7.1+2
   provider: ^6.1.5+1
   web_socket_channel: ^3.0.3
