Enhance test coverage workflow: add error handling for lcov command and create .gitkeep files in coverage and test_reports directories

--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -29,5 +29,5 @@ jobs:
       - name: 🧪 Run tests with coverage
         run: |
           flutter test --coverage
-          lcov --remove coverage/lcov.info '*/.pub-cache/*' '*/test/*' '/usr/*' '*/build/*' -o coverage/filtered_lcov.info
+          lcov --ignore-errors unused --remove coverage/lcov.info '*/.pub-cache/*' '*/test/*' '/usr/*' '*/build/*' -o coverage/filtered_lcov.info
           lcov --list coverage/filtered_lcov.info
