--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.11.1
+  mocktail: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,6 +80,5 @@ flutter:
           style: italic
         - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 700
-
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
