--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^9.2.0
   go_router: ^17.0.0
   injectable: ^2.7.1+2
+  intl: ^0.20.2
   provider: ^6.1.5+1
   web_socket_channel: ^3.0.3
 
