--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   injectable: ^2.7.1+2
   intl: ^0.20.2
   provider: ^6.1.5+1
+  share_plus: ^12.0.1
   web_socket_channel: ^3.0.3
 
 dev_dependencies:
