--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_logs: ^2.2.1
   flutter_secure_storage: ^9.2.4
   fluttertoast: ^9.0.0
   get_it: ^9.2.0
