--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -28,6 +28,5 @@ jobs:
 
       - name: 🧪 Run tests with coverage
         run: |
-          flutter test --coverage
-          lcov --ignore-errors unused --remove coverage/lcov.info '*/.pub-cache/*' '*/test/*' '/usr/*' '*/build/*' -o coverage/filtered_lcov.info
-          lcov --list coverage/filtered_lcov.info
+          chmod +x scripts/*.sh
+          ./scripts/test-with-coverage.sh
