--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -40,3 +40,24 @@ jobs:
           reporter: "flutter-json"
           max-annotations: "50"
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🪪 Create passing test results badge
+        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
+        uses: schneegans/dynamic-badges-action@v1.7.0
+        with:
+          auth: ${{ secrets.BADGE_GIST_TOKEN }}
+          gistID: "a326af0439aec9c2a4aed809dc731a36"
+          filename: "passing-tests-badge.json"
+          label: "Tests"
+          message: "${{ steps.compute_test_results.outputs.passed }} passed, ${{ steps.compute_test_results.outputs.failed }} failed"
+          namedLogo: "TestCafe"
+          labelColor: "lightgrey"
+          color: ${{ steps.compute_test_results.outputs.failed == 0 && 'brightgreen' ||  'red' }}
+
+      - name: 🧪📊 Publish coverage report
+        if: github.event_name == 'pull_request'
+        uses: romeovs/lcov-reporter-action@v0.4.0
+        with:
+          lcov-file: coverage_report/cleaned_combined_lcov.info
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Coverage Report"
