Refactor coverage report script to accept project root path as an argument and improve file handling

--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 🧪 Combine coverage reports
         run: |
           chmod +x scripts/*.sh
-          ./scripts/combine-coverage.sh
+          ./scripts/combine-coverage.sh ${{ github.workspace }}
 
       - name: 🧪✅❌ Publish test results
         id: compute_test_results
