--- a/.github/workflows/_test_with_coverage.yml
+++ b/.github/workflows/_test_with_coverage.yml
@@ -28,6 +28,68 @@ jobs:
 
       - name: 🧪 Run tests with coverage
         run: |
-          flutter test --coverage
-          lcov --ignore-errors unused --remove coverage/lcov.info '*/.pub-cache/*' '*/test/*' '/usr/*' '*/build/*' -o coverage/filtered_lcov.info
-          lcov --list coverage/filtered_lcov.info
+          chmod +x scripts/*.sh
+          ./scripts/test-with-coverage.sh
+
+      - name: 🧪 Combine coverage reports
+        run: |
+          chmod +x scripts/*.sh
+          ./scripts/combine-coverage.sh ${{ github.workspace }}
+
+      - name: 🧪✅❌ Publish test results
+        id: compute_test_results
+        uses: dorny/test-reporter@v2.5.0
+        with:
+          name: "🧪📊 Unit tests report"
+          path: test_reports/*_test_report.json
+          reporter: "flutter-json"
+          max-annotations: "50"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🪪 Create passing test results badge
+        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
+        uses: schneegans/dynamic-badges-action@v1.7.0
+        with:
+          auth: ${{ secrets.BADGE_GIST_TOKEN }}
+          gistID: "cb6c4617ba53ee0149dfa224e83ba59f"
+          filename: "passing-tests-badge.json"
+          label: "Tests"
+          message: "${{ steps.compute_test_results.outputs.passed }} passed, ${{ steps.compute_test_results.outputs.failed }} failed"
+          namedLogo: "TestCafe"
+          labelColor: "lightgrey"
+          color: ${{ steps.compute_test_results.outputs.failed == 0 && 'brightgreen' ||  'red' }}
+
+      - name: 🧪📊 Publish coverage report
+        if: github.event_name == 'pull_request'
+        uses: romeovs/lcov-reporter-action@v0.4.0
+        with:
+          lcov-file: coverage_report/cleaned_combined_lcov.info
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Coverage Report"
+
+      - name: 🥤 Extract test coverage percentage
+        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
+        run: |
+          chmod +x scripts/*.sh
+          ./scripts/generate-html-coverage.sh
+          grep -o '.*headerCovTableEntryLo.*' coverage_report/index.html \
+            | sed -E 's/.*>([0-9.]+) %<.*/\1/' \
+            > coverage_percentage.txt
+          percentage=$(cat coverage_percentage.txt)
+          echo "Coverage percentage: $percentage"
+          echo "coverage_percentage=$percentage" >> "$GITHUB_ENV"
+
+      - name: 🪪 Create test coverage badge
+        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
+        uses: schneegans/dynamic-badges-action@v1.7.0
+        with:
+          auth: ${{ secrets.BADGE_GIST_TOKEN }}
+          gistID: "cb6c4617ba53ee0149dfa224e83ba59f"
+          filename: "passing-tests-badge.json"
+          label: "Test coverage"
+          message: "${{ env.coverage_percentage }} %"
+          namedLogo: "Codecov"
+          labelColor: "lightgrey"
+          valColorRange: ${{ env.coverage_percentage }}
+          minColorRange: 50
+          maxColorRange: 80
