--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_localizations:
+    sdk: flutter
   flutter_logs: ^2.2.1
   flutter_secure_storage: ^9.2.4
   fluttertoast: ^9.0.0
   get_it: ^9.2.0
   go_router: ^17.0.0
   injectable: ^2.7.1+2
-  intl: ^0.20.2
+  intl: any
   provider: ^6.1.5+1
   share_plus: ^12.0.1
   web_socket_channel: ^3.0.3
@@ -62,6 +64,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
