--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -49,4 +49,12 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+     <queries>
+        <intent>
+        <action android:name="android.intent.action.SENDTO" />
+        <data android:scheme="mailto" />
+        </intent>
+    </queries>
+
 </manifest>
