--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_email_sender: ^8.0.0
   flutter_localizations:
     sdk: flutter
   flutter_logs: ^2.2.1
